public/stylesheets/style.css
body {
  background-color: #eefdff;
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  text-align: center;
}

h1 {
  text-align: center;
  color: #464455;
  margin: 40px 0;
  font-size: 8vmin;
}

.svg-container {
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
}

nav {
  background-color: #464455;
  padding: 10px;
  text-align: center;
  border-radius: 2px;
}

nav a {
  color: #fff;
  text-decoration: none;
  margin: 0 10px;
}

nav a:hover {
  text-decoration: underline;
  color: #87cefa;
}

a {
  color: #00B7FF;
}

svg {
  height: 70vmin;
  margin-top: -8vmin;
}

table {
  border-collapse: collapse;
  width: 100%;
}

table tbody tr:nth-child(even) {
  background-color: #f9f9f9;
}

table th,
table td {
  padding: 12px;
  text-align: left;
}

table th {
  background-color: #f0f0f0;
  font-weight: bold;
}

table tbody tr:hover {
  background-color: #f5f5f5;
}

.flight-passed,
.flight-passed:hover {
  background-color: #ff977d !important;
}

h2 {
  margin-top: 3vmin;
}

form {
  margin-bottom: 20px;
}

label {
  display: block;
  margin-bottom: 10px;
}

select,
input[type="number"],
input[type="datetime-local"] {
  margin-top: 5px;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
  width: 20%;
  box-sizing: border-box;
}

button[type="submit"] {
  padding: 10px 20px;
  background-color: #4CAF50;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

button[type="submit"]:hover {
  background-color: #45a049;
}

p {
  color: red;
  margin-top: 10px;
}

